<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    android:orientation="vertical">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#222222"
        android:gravity="center"
        android:textColor="#DFDFDF"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/display2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#222222"
        android:gravity="center"
        android:textColor="#DFDFDF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b7"
            android:textColor="@color/btnColorNumber"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b8"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b9"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/btnBackgroundColor"
            android:text="@string/divide"
            android:textColor="@color/btnColorOperation"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b4"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b5"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b6"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button_multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:background="@color/btnBackgroundColor"
            android:textColor="@color/btnColorOperation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b1"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b2"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b3"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button_substract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="30sp"
            android:background="@color/btnBackgroundColor"
            android:textColor="@color/btnColorOperation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ce"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ce"
            android:textColor="@color/btnColorOperation"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b0"
            android:textColor="@color/btnColorNumber" />

        <Button
            android:id="@+id/button_equals"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textColor="@color/btnColorOperation"
            android:textSize="30sp"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/button_plus"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:background="@color/btnBackgroundColor"
            android:textColor="@color/btnColorOperation" />

    </LinearLayout>
</LinearLayout>
